# PDF-Chatbot

./: .gitignore  README.md  api.py  app.py  app_old.py  invoice_knowledge.txt  main.py  pyproject.toml  requirements.txt  run.py  test_search.py
.streamlit/: config.toml
backend/app/: main.py
backend/app/api/: auth_routes.py  endpoints.py
backend/app/core/: auth_utils.py  config.py  constants.py
backend/app/models/: schemas.py  user_models.py
backend/app/services/: ai_service.py  mongodb_service.py  pdf_service.py  profile_service.py  vector_service.py
frontend/: app.py
user_data/: profile.json
