[project]
name = "pdf-chatboat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "groq>=1.0.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-huggingface",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.54.0",
    "pandas",
    "duckduckgo-search"
]
